# mess_py_api

./: .gitignore  pyproject.toml  requirements.txt  requirements1.txt
server_setup/: setup_server.py
server_setup/arrs/prowlarr/: __init__.py  connect_radarr.py  connect_sonarr.py  prowlarr_api.py  prowlarr_setup.py
server_setup/arrs/radarr/: __init__.py  add_blackhole.py  add_blackhole_radarr.py  download_clients.py  radarr_api.py  radarr_setup.py
server_setup/arrs/sonarr/: __init__.py  add_blackhole_sonarr.py  download_clients.py  sonarr_api.py  sonarr_setup.py
server_setup/decryption/: __init__.py  decrypt_pass.py
server_setup/jellyfin_api/: __init__.py  add_tuner_and_epg.py  setup_server.py
server_setup/jellyfin_api/libraries/: __init__.py  library_mgmt.py
server_setup/jellyseerr/: setup_jellyseerr.py
server_setup/m3uparser/: add_vod_library.py
server_setup/threadfin/: setup_threadfin.py  threadfin_setup.py
